--- a/style/style.css
+++ b/style/style.css
@@ -19,10 +19,24 @@
 	border-radius: 4px;
 }
 
+.video-detail .detailsTitle {
+	font-weight: bold;
+	font-size: 1.5em;
+	text-align: center;
+}
+
 .list-group-item {
 	cursor: pointer;
 }
 
 .list-group-item:hover {
 	background-color: #eee;
-};
+}
+
+.headerTitle{
+	text-align: center;
+	font-weight: bold;
+	font-size: 2.2em;
+	margin-top: 20px;
+}
+
